<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.nav.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fragment_home_current_phrase_view"
            android:layout_marginHorizontal="32dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fragment_home_add_new_phrase_card"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:textColor="#ACB5C3"
                android:layout_height="wrap_content"
                android:text="@string/string_current_password_disclaimer"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fragment_home_current_phrase"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#21466f"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_current_password_placeholder"
                android:maxLength="100"
                android:maxLines="2"
                android:lines="2"
                android:ellipsize="end"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/fragment_home_current_phrase_time_added_last"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#ACB5C3"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_home_add_new_phrase_card"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="64dp"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="100dp"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="#21466f"
            android:layout_width="200dp"
            android:layout_height="200dp">

            <TextView
                android:layout_margin="32dp"
                android:gravity="center"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:text="@string/string_add_current_phrase_button_title"
                android:textColor="#ACB5C3"
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_home_check_for_lottery_winners"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/string_show_winners_button_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_home_add_new_phrase_card" />

        <View
            android:background="@color/primary"
            android:id="@+id/fragment_home_divider"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="128dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_check_for_lottery_winners"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_home_my_current_lottery_tickets"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_divider" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/fragment_home_my_current_lottery_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_divider" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fragment_home_add_my_lottery_tickets"
            android:text="@string/string_my_tickets_button_title"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:strokeColor="@color/primary"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>