<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32dp"
    tools:context=".fragments.nav.CheckFullPhrase">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_check_full_phrase_current_phrase_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            android:text="@string/string_current_password_disclaimer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/fragment_check_full_phrase_current_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/secondaryTextColor"
            android:textAllCaps="true"
            android:text="@string/string_current_password_placeholder"
            android:lines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/fragment_check_full_phrase_current_phrase_title" />

        <TextView
            android:id="@+id/fragment_check_full_phrase_phrases_lifespan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_check_full_phrase_current_phrase" />

        <TextView
            android:id="@+id/fragment_check_full_phrase_phrases_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_check_full_phrase_current_phrase" />

        <View
            app:layout_constraintTop_toBottomOf="@+id/fragment_check_full_phrase_phrases_count"
            android:id="@+id/fragment_check_full_phrase_phrases_separator"
            android:background="@color/textColor"
            android:layout_marginVertical="4dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_check_full_phrase_submitted_phrases"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_check_full_phrase_phrases_separator" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/fragment_check_full_phrase_submitted_phrases_loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_check_full_phrase_submitted_phrases" />

        <ImageView
            android:contentDescription="@string/string_check_full_phrase_no_phrases_traffic"
            android:id="@+id/fragment_check_full_phrase_no_phrases"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:visibility="gone"
            android:src="@drawable/travolta_confused"
            app:layout_constraintTop_toTopOf="@+id/fragment_check_full_phrase_submitted_phrases"
            app:layout_constraintEnd_toEndOf="@+id/fragment_check_full_phrase_submitted_phrases"
            app:layout_constraintStart_toStartOf="@+id/fragment_check_full_phrase_submitted_phrases"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_check_full_phrase_submitted_phrases" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>