<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.nav.AddLotteryTickets">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_add_lottery_tickets_title"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="64dp"
            android:text="@string/string_add_your_tickets_disclaimer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.chaos.view.PinView
            android:id="@+id/fragment_add_lottery_tickets_lottery_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center"
            android:textAlignment="center"
            android:cursorVisible="true"
            style="@style/PinWidget.PinView"
            android:textSize="18sp"
            android:textStyle="bold"
            app:lineColor="@color/primary"
            android:textColorHighlight="@color/primaryVariant"
            app:cursorColor="@color/secondary"
            app:cursorWidth="2dp"
            app:itemCount="12"
            android:maxLength="12"
            app:itemWidth="18dp"
            app:itemHeight="24dp"
            android:textAllCaps="true"
            android:inputType="textCapCharacters"
            android:hint="@string/string_ticket_format_hint"
            app:viewType="line"
            android:lines="1"
            app:itemSpacing="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_lottery_tickets_title" />

        <TextView
            android:id="@+id/fragment_add_lottery_tickets_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/errorColor"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_lottery_tickets_lottery_form" />

        <View
            android:layout_width="1dp"
            android:layout_height="18dp"
            android:background="@color/primary"
            android:layout_marginStart="92dp"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_add_lottery_tickets_lottery_form"
            app:layout_constraintStart_toStartOf="@+id/fragment_add_lottery_tickets_lottery_form"
            app:layout_constraintTop_toTopOf="@+id/fragment_add_lottery_tickets_lottery_form" />

        <View
            android:layout_width="1dp"
            android:layout_height="18dp"
            android:background="@color/primary"
            android:layout_marginEnd="92dp"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_add_lottery_tickets_lottery_form"
            app:layout_constraintEnd_toEndOf="@+id/fragment_add_lottery_tickets_lottery_form"
            app:layout_constraintTop_toTopOf="@+id/fragment_add_lottery_tickets_lottery_form" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_add_lottery_ticket_add_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_add_button_title"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_lottery_tickets_error_message" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_add_lottery_ticket_list_of_tickets"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_lottery_ticket_add_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>